Primeiro + classes e pacotes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=WebOS
+
+spring.datasource.url=jdbc:mysql://10.0.1.10:3306/gtech-gestao
+spring.datasource.username=g3_informatica
+spring.datasource.password=#g31nf#
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
