--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,11 @@
 spring.application.name=WebOS
 
-spring.datasource.url=jdbc:mysql://10.0.1.10:3306/gtech-gestao
+spring.datasource.url=jdbc:mysql://10.0.1.26:3306/gtech-gestao?serverTimezone=America/Sao_Paulo
 spring.datasource.username=g3_informatica
 spring.datasource.password=#g31nf#
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
 
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
